# synth-32

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust_ci.yml
big-synth-contoller/: code.circuit-py.reference.py
big-synth-contoller/keyboard-scanner/: README.md  code.py
big-synth-contoller/keyboard-scanner.old/: platformio.ini
big-synth-contoller/keyboard-scanner.old/src/: main.cpp
big-synth-contoller/knobs-scanner/: code.py  platformio.ini
big-synth-contoller/knobs-scanner/src/: main.cpp
modules/: flake.nix
modules/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
modules/lowpass-filter/: Cargo.toml  sdkconfig.defaults
modules/oscillator/: Cargo.toml  justfile
modules/oscillator/.cargo/: config.toml
modules/oscillator/src/: main.rs
old/: Cargo.toml
old/helper-scripts/: notes-names.py
src/: main.rs  moanin.rs  notes.rs
src/synth/: echo.rs  mod.rs  synth.rs  trem.rs
src/tests/: all_notes.rs  arpeggio.rs  chord.rs  echo.rs  mod.rs  trem.rs
synth/: 3  ;  Cargo.toml  README.md  sdkconfig.defaults
synth-32/: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  justfile  sdkconfig.defaults
synth-32/.cargo/: config.toml
synth-32/src/: lib.rs  main.rs
synth-lib/: Cargo.toml  README.md
synth-lib/src/: adsr.rs  echo.rs  lib.rs  lowpass.rs  notes.rs  osc.rs  synth.rs  trem.rs
synth-lib/src/envelope/: adbdr.rs  adsr.rs  adsr_new.rs  mod.rs
synth/helper-scripts/: notes-hashmap.py
synth/src/: echo.rs  lib.rs  main.rs  synth.rs
(+26 files in other folders)
